# Krusty-crap

./: Cargo.toml  PROTOCOL.md  README.md  input.toml  logs.txt
src/: general_use.rs  gg.html  initialization_file_checker.rs  main.rs  network_initializer.rs  terminal_messages.rs  terminal_ui.rs  ui.rs  ui_traits.rs  websocket.rs
src/clients/client_chen/: client_chen.rs  functionality_test.rs  general_client_traits.rs  mod.rs  prelude.rs  ui.rs  web_browser_client_traits.rs
src/clients/client_chen/impl_general_client_traits/: impl_command_handler.rs  impl_communication_tools.rs  impl_flooding_packets_handler.rs  impl_fragment_handler.rs  impl_packet_creator.rs  impl_packet_response_handler.rs  impl_packets_receiver.rs  impl_router.rs  impl_sending.rs  impl_server_query.rs  mod.rs
src/clients/client_danylo/: chat_client_traits.rs  client_danylo.rs  impl_monitoring.rs  message_fragments.rs  mod.rs
src/clients/client_danylo/implementations/: impl_command_handler.rs  impl_generator_id.rs  impl_monitoring.rs  impl_packet_handler.rs  impl_reassembler.rs  impl_senders.rs  impl_server_response_handler.rs  mod.rs
src/servers/: communication_server.rs  content.rs  media_server.rs  server.rs  text_server.rs
src/simulation_controller/: mod.rs  monitoring.rs  simulation_controller.rs
static/: index.html  index_testing.html  index_testing_testing.html  oldcode_for_testing.txt
static/js/: client.js  controller.js  testing.js
static/styles/: client.css  controller.css  testing.css
topologies/: butterfly.toml  decagram.toml  tree.toml
